--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_statusbarcolor_ns: ^0.5.0
   flutter_svg: ^2.0.10+1
   animated_bottom_navigation_bar: ^1.3.3
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
