--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  otp_pin_field: ^1.2.9
 
 dev_dependencies:
   flutter_test:
