--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   otp_pin_field: ^1.2.9
+  dio: ^5.5.0+1
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
