--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   otp_pin_field: ^1.2.9
   dio: ^5.5.0+1
   pretty_dio_logger: ^1.4.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
