--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   otp_pin_field: ^1.2.9
   dio: ^5.5.0+1
   pretty_dio_logger: ^1.4.0
-  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  geolocator: ^12.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
