--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive_flutter: ^1.1.0
   geolocator: ^12.0.0
   shimmer: ^3.0.0
+  fast_cached_network_image: ^1.2.9
 
 dev_dependencies:
   flutter_test:
